# tpot-digest

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_v2_schema.py  002_add_memo.py  003_add_url.py  004_add_waitlist.py  005_add_x_api_fields.py  006_add_grok_context.py  007_add_og_tweet_id.py  008_category_string.py  009_add_url_entities.py  010_add_topic_scripts.py  011_add_saved_at_index.py  012_add_assignment_composite_index.py  (+13 more)
backend/app/: auth.py  config.py  db.py  main.py  scheduler.py  storage.py
backend/scripts/: backfill_embeddings.py  recategorize_all.py
backend/tests/: test_accounts_api.py  test_analytics_api.py  test_article.py  test_assignments_api.py  test_auth.py  test_browser.py  test_categories_api.py  test_classifier.py  test_claude_api.py  test_clustering.py  test_digest_api.py  test_discovery.py  test_draft_immutability.py  test_embeddings.py  test_feed_parser.py  test_graph.py  test_graph_api.py  test_grok_api.py  test_ingest_api.py  test_lifecycle.py  test_models.py  test_pipeline_integration.py  test_quality_filter.py  test_relevance.py  test_scheduler.py  test_screenshot.py  test_script_generator.py  test_scripts_api.py  test_share_previews.py  test_smart_title.py  test_storage.py  test_subscribers_api.py  test_subtopic_clustering.py  test_topics_api.py  test_tweets_api.py  test_waitlist_api.py  test_x_api_service.py
(+264 files in other folders)
