[project]
name = "tpot-digest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.0",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "anthropic>=0.40",
    "resend>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.28", "aiosqlite>=0.20"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
